fixed icon alignment discrepancies in .menu-items

--- a/src/css/3-screens/5-l.css
+++ b/src/css/3-screens/5-l.css
@@ -43,10 +43,8 @@
 
 	.header-button,
 	.menu-main > ul > li > .menu-item {
-		align-items: center;
 		border-bottom: 0 none;
 		border-radius: 4px;
-		display: flex;
 		font-size: 1em;
 		margin: 2px;
 		padding: 6px 8px;
@@ -75,7 +73,7 @@
 		padding-top: 1px; /* fix the misalignment due to the relative position */
 	}
 
-	.menu-language-choice li, .menu-music li {
+	.menu-theme-choice li, .menu-language-choice li, .menu-music li {
 		margin: 0 4px;
 	}
 
@@ -117,9 +115,6 @@
 	.menu-main > ul > li {
 		padding: 0;
 	}
-
-
-/*============== Language Menu ==============*/
 
 
 /*============== Music Menu ==============*/
